<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/but_cat_2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/cat_processors"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="16sp"
                app:backgroundTint="#C4C4C4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/but_cat_1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="56dp"
                android:text="@string/cat_motherboards"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="16sp"
                app:backgroundTint="#C4C4C4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/but_cat_3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/cat_RAM_memory"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="16sp"
                app:backgroundTint="#C4C4C4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/but_cat_1" />

            <Button
                android:id="@+id/but_cat_4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/cat_video_cards"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="16sp"
                app:backgroundTint="#C4C4C4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/but_cat_2" />

            <Button
                android:id="@+id/but_cat_5"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="60dp"
                android:text="@string/cat_ssd"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="16sp"
                app:backgroundTint="#C4C4C4"
                app:layout_constraintEnd_toStartOf="@+id/but_cat_4"
                app:layout_constraintStart_toEndOf="@+id/but_cat_3"
                app:layout_constraintTop_toBottomOf="@+id/but_cat_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>